--- a/mountain.html
+++ b/mountain.html
@@ -169,7 +169,7 @@
                     <div class="card-body">
                         <h5 class="card-title">0€</h5>
                         <p class="card-text">Le kiff<br>A Bali<br>Pendant une semaine</p>
-                        <a href="#" class="btn btn-primary btn-lg">S'incscire</a>
+                        <a href="#" class="btn btn-primary col-6">S'incscire</a>
                     </div>
                 </div>
             </div>
@@ -179,7 +179,7 @@
                     <div class="card-body">
                         <h5 class="card-title">15€</h5>
                         <p class="card-text">Le kiff<br>A Bali<br>Pendant 12 semaines</p>
-                        <a href="#" class="btn btn-primary btn-lg">S'inscrire</a>
+                        <a href="#" class="btn btn-primary col-6">S'inscrire</a>
                     </div>
                 </div>
             </div>
@@ -189,7 +189,7 @@
                     <div class="card-body">
                         <h5 class="card-title">7€/mo</h5>
                         <p class="card-text">Le kiff<br>A Bali<br>Pendant 12 semaines</p>
-                        <a href="#" class="btn btn-primary btn-lg">S'inscrire</a>
+                        <a href="#" class="btn btn-primary col-6">S'inscrire</a>
                     </div>
                 </div>
             </div>
