--- a/mountain.html
+++ b/mountain.html
@@ -143,7 +143,7 @@
 <center>
   <div class="carte">
 <div class="card" style="width: 30rem;">
-  <img class="card-img-top" src="combi.jpg" alt="Card image cap">
+  <img class="card-img-top" src="combi.png" alt="Card image cap">
   <div class="card-body">
     <p class="card-text">BLABLABLA QUI S'EN FOUT DE SAVOIR CE QUE TU FAIS DE TA VIE ESPECE DE HIPPIE DE MERDE !</p>
   </div>
@@ -159,7 +159,7 @@
 <br>
 <center>
 
-<h2>Prix</h2>
+<h1>Prix</h1>
 <br>
 <div class="container">
         <div class="row">
